Fix spacing problems with recent posts lists

--- a/css/_wp.content.scss
+++ b/css/_wp.content.scss
@@ -103,7 +103,6 @@ hr.is-style-wide {
 .wp-block-archives,
 .wp-block-categories,
 .wp-block-latest-posts {
-  @include container;
   margin: $my auto;
   label {
     display: block;
